--- a/Phone/main/res/layout/account_info_confirm.xml
+++ b/Phone/main/res/layout/account_info_confirm.xml
@@ -3,11 +3,7 @@
         android:id="@+id/scrollView1"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:background="@drawable/gradient_bg"             
-        android:paddingBottom="@dimen/content_padding"
-        android:paddingLeft="@dimen/content_padding"
-        android:paddingRight="@dimen/content_padding"
-        android:paddingTop="@dimen/content_padding">
+        style="@style/WhiteTheme" >
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -165,7 +161,14 @@
                 android:layout_marginTop="16dp"
                 android:onClick="navigateToHome"/>
             
-          <include layout="@layout/copyright_footer"/>
+          <RelativeLayout
+    	    android:layout_width="match_parent"
+    	    android:layout_height="100dp"
+    	    android:layout_below="@+id/account_info_confirm_home_button" >
+    	    
+    	    <include layout="@layout/copyright_footer"/>
+    	    
+    	</RelativeLayout>
         
 	</RelativeLayout>
 
