--- a/Phone/main/res/layout/big_error.xml
+++ b/Phone/main/res/layout/big_error.xml
@@ -1,12 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:background="@drawable/gradient_bg"  
+    style="@style/WhiteTheme"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" 
-    android:paddingBottom="@dimen/content_padding"
-    android:paddingLeft="@dimen/content_padding"
-    android:paddingRight="@dimen/content_padding"
-    android:paddingTop="@dimen/content_padding">
+    android:layout_height="fill_parent" >
 
      <TextView
          android:id="@+id/vital_artery_eviscerating_error_label"
