--- a/Phone/main/res/layout/landing.xml
+++ b/Phone/main/res/layout/landing.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/login_bkgd" >
+    style="@style/BlackTheme" >
     
     <include layout="@layout/discover_banner"/>
 
