--- a/Phone/main/res/layout/list_row.xml
+++ b/Phone/main/res/layout/list_row.xml
@@ -1,61 +1,60 @@
 <?xml version="1.0" encoding="UTF-8"?>
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="fill_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:background="@color/white">
+
+    <TextView
+        android:id="@+id/label_1"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/white"
-         >
+        android:text="TextView" 
+        android:textColor="@color/black"
+        />
 
-        <TextView
-            android:id="@+id/label_1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="TextView" 
-            android:textColor="@color/black"
-            />
+    <TextView
+        android:id="@+id/label_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/label_1"
+        android:text="TextView" 
+        android:textColor="@color/black"                
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        />
+   
+   <TextView
+       android:id="@+id/label_1_data"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:layout_centerHorizontal="true"
+       android:text="TextView"
+       android:textColor="@color/orange" />
+   
+   <TextView
+       android:id="@+id/label_2_data"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:layout_below="@id/label_1_data"
+       android:layout_centerHorizontal="true"
+       android:text="TextView"
+       android:textColor="@color/orange" />
+   
+   <TextView
+       android:id="@+id/link_label"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:layout_centerVertical="true"
+       android:layout_toLeftOf="@+id/right_arrow"
+       android:text="TextView"
+       android:textColor="@color/blue" />
+   
+   <TextView
+       android:id="@+id/right_arrow"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:layout_alignParentRight="true"
+       android:layout_centerVertical="true"
+       android:text=">"
+       android:textColor="@color/blue" />
 
-        <TextView
-            android:id="@+id/label_2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/label_1"
-            android:text="TextView" 
-            android:textColor="@color/black"                
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            />
-       
-       <TextView
-           android:id="@+id/label_1_data"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:layout_centerHorizontal="true"
-           android:text="TextView"
-           android:textColor="@color/orange" />
-       
-       <TextView
-           android:id="@+id/label_2_data"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:layout_below="@id/label_1_data"
-           android:layout_centerHorizontal="true"
-           android:text="TextView"
-           android:textColor="@color/orange" />
-       
-       <TextView
-           android:id="@+id/link_label"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:layout_centerVertical="true"
-           android:layout_toLeftOf="@+id/right_arrow"
-           android:text="TextView"
-           android:textColor="@color/blue" />
-       
-       <TextView
-           android:id="@+id/right_arrow"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:layout_alignParentRight="true"
-           android:layout_centerVertical="true"
-           android:text=">"
-           android:textColor="@color/blue" />
-
-    </RelativeLayout>
+</RelativeLayout>
