--- a/Phone/main/res/values/styles.xml
+++ b/Phone/main/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!--
         Base application theme, dependent on API level. This theme is replaced
@@ -24,6 +24,10 @@
 
     <style name="WhiteTheme">
         <item name="android:background">@drawable/gradient_bg</item>
+        <item name="android:paddingBottom">@dimen/content_padding</item>
+        <item name="android:paddingLeft">@dimen/content_padding</item>
+        <item name="android:paddingRight">@dimen/content_padding</item>
+        <item name="android:paddingTop">@dimen/content_padding</item>
     </style>
     
     <style name="WhiteThemeFooter">
