Updated new password screen text and spacing. Made the cancel button navigate back to the forgot credentials screen. Changed user id checking on create login activity so that the only restriction on a "looks like account number" user id is one that starts with 6011. Added bad account status error screen for a 1911 case - seems to be the same as the other 1913 error.

--- a/Phone/main/res/layout/enter_new_password.xml
+++ b/Phone/main/res/layout/enter_new_password.xml
@@ -147,7 +147,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/account_info_two_pass_strength_label"
                 android:layout_marginTop="8dp"
-                android:text="@string/account_info_two_pass_confirm_text"
+                android:text="@string/account_info_two_new_pass_confirm_text"
                 android:textColor="@color/black" />
 
             <TextView 
@@ -173,10 +173,17 @@
                 android:id="@+id/account_info_two_cancel_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
+
+                android:layout_toLeftOf="@+id/account_info_two_submit_button"
+                android:padding="8dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginRight="64dp"
+                android:clickable="true"
+                android:layout_alignTop="@+id/account_info_two_submit_button"
                 android:layout_below="@+id/account_info_two_pass_confirm_field"
                 android:text="@string/cancel_text"
-                android:textColor="@color/blue" />
+                android:textColor="@color/blue" 
+                android:onClick="cancel"/>
 
             <Button
                 android:id="@+id/account_info_two_submit_button"
