--- a/Phone/main/res/layout/account_info_two.xml
+++ b/Phone/main/res/layout/account_info_two.xml
@@ -9,17 +9,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
         
-   	<!-- Dummy item to prevent AutoCompleteTextView from receiving focus -->
-	<LinearLayout
-	    android:focusable="true" android:focusableInTouchMode="true"
-	    android:layout_width="0px" android:layout_height="0px"/>
-
-	<!-- :nextFocusUp and :nextFocusLeft have been set to the id of this component
-   	to prevent the dummy from receiving focus again -->
-	<AutoCompleteTextView android:id="@+id/autotext"
-	    android:layout_width="0dp" android:layout_height="0dp"
-	    android:nextFocusUp="@id/autotext" android:nextFocusLeft="@id/autotext"/>
-
+	   	<!-- Dummy item to prevent AutoCompleteTextView from receiving focus -->
+		<LinearLayout
+		    android:focusable="true" android:focusableInTouchMode="true"
+		    android:layout_width="0px" android:layout_height="0px"/>
+	
+		<!-- :nextFocusUp and :nextFocusLeft have been set to the id of this component
+	   	to prevent the dummy from receiving focus again -->
+		<AutoCompleteTextView android:id="@+id/autotext"
+		    android:layout_width="0dp" android:layout_height="0dp"
+	   		android:nextFocusUp="@id/autotext" android:nextFocusLeft="@id/autotext"/>
+	
+	
           <TextView
               android:id="@+id/account_info_register_label"
               android:layout_width="wrap_content"
@@ -74,11 +75,13 @@
               android:textSize="@dimen/light_text_size"  />
 
           <TextView 
-           android:id="@+id/account_info_error_label"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-		android:layout_below="@id/account_information_input_info_label"
-		android:textColor="@color/red"/>
+           	android:id="@+id/account_info_error_label"
+           	android:layout_width="wrap_content"
+           	android:layout_height="wrap_content"
+			android:layout_below="@id/account_information_input_info_label"
+			android:textColor="@color/red"
+			android:text="@string/invalid_value"
+			android:visibility="gone"/>
           
           <EditText
               android:id="@+id/account_info_two_id_field"
@@ -92,9 +95,7 @@
               android:maxLength="16"
               android:maxLines="@integer/MAX_INPUT_LINES"
               android:paddingTop="8dp" >
-                      
-               <requestFocus />
-              </EditText>
+          </EditText>
           
           <TextView
               android:id="@+id/account_info_two_id_strength_label"
@@ -142,12 +143,21 @@
               android:text="@string/empty"
 		android:textColor="@color/black"
 		/>
+          
+        <TextView 
+           	android:id="@+id/account_info_id_confirm_error_label"
+           	android:layout_width="wrap_content"
+           	android:layout_height="wrap_content"
+			android:layout_below="@+id/account_info_two_id_strength_label"
+			android:textColor="@color/red"
+			android:text="@string/invalid_value"
+			android:visibility="gone"/>
 
           <TextView
               android:id="@+id/account_info_two_confirm_id_label"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
-              android:layout_below="@+id/account_info_two_id_strength_label"
+              android:layout_below="@+id/account_info_id_confirm_error_label"
               android:layout_marginTop="8dp"
               android:text="@string/account_info_two_confirm_id_text"
               android:textColor="@color/black" />
@@ -183,7 +193,16 @@
               android:textAppearance="?android:attr/textAppearanceSmall"
               android:textColor="@color/black"
               android:textSize="@dimen/light_text_size" />
-
+          
+          <TextView 
+           	android:id="@+id/account_info_error_label"
+           	android:layout_width="wrap_content"
+           	android:layout_height="wrap_content"
+			android:layout_below="@id/account_information_input_info_label"
+			android:textColor="@color/red"
+			android:text="@string/invalid_value"
+			android:visibility="gone"/>a
+          
           <EditText
               android:id="@+id/account_info_two_pass_field"
               android:layout_width="wrap_content"
@@ -253,6 +272,15 @@
               android:text="@string/account_info_two_pass_confirm_text"
               android:textColor="@color/black" />
 
+          <TextView 
+           	android:id="@+id/account_info_pass_two_confirm_error_label"
+           	android:layout_width="wrap_content"
+           	android:layout_height="wrap_content"
+			android:layout_below="@+id/account_info_two_pass_confirm_label"
+			android:text="@string/invalid_value"
+			android:textColor="@color/red"
+			android:visibility="gone"/>
+          
           <EditText
               android:id="@+id/account_info_two_pass_confirm_field"
               android:layout_width="wrap_content"
