--- a/Phone/main/res/layout/login.xml
+++ b/Phone/main/res/layout/login.xml
@@ -168,22 +168,11 @@
 	
 	    </LinearLayout>
 	
-	    <LinearLayout
-	        android:id="@+id/reflection"
-	        android:layout_width="294dp"
-	        android:layout_height="64dp"
-	        android:layout_below="@id/linearLayout1"
-	        android:layout_centerHorizontal="true"
-	        android:layout_marginTop="1dp"
-	        android:background="@drawable/login_box_reflection"
-	        android:orientation="vertical" >
-	
-	    </LinearLayout>
-	
 	    <RelativeLayout
     	    android:layout_width="match_parent"
     	    android:layout_height="100dp"
-    	    android:layout_below="@+id/reflection" >
+    	    android:layout_marginTop="64dp"
+    	    android:layout_below="@+id/linearLayout1" >
 
    			<include layout="@layout/copyright_footer"/>
     	    
