--- a/Phone/main/res/layout/enter_new_password.xml
+++ b/Phone/main/res/layout/enter_new_password.xml
@@ -38,12 +38,17 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/account_info_step_label"
+                android:text="@string/account_info_bad_input_error_text"
+                android:visibility="gone"
                 android:textColor="@color/red" />
-
+            
             <TextView
                 android:id="@+id/account_info_error_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_below="@+id/account_info_main_error_label"
+                android:text="@string/account_info_two_id_matches_pass_error_text"
+                android:visibility="gone"
                 android:textColor="@color/red" />
 
             <TextView
@@ -58,7 +63,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:layout_below="@id/account_info_step_label"
+                android:layout_below="@+id/account_info_error_label"
                 android:text="@string/forgot_pass_create_new_text"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textColor="@color/black"/>
@@ -78,6 +83,8 @@
 	            android:layout_width="wrap_content"
 	            android:layout_height="wrap_content"
 				android:layout_below="@+id/account_info_two_pass_info_label"
+				android:text="@string/invalid_value"
+				android:visibility="gone"
 				android:textColor="@color/red"/>
 			
             <EditText
@@ -151,6 +158,8 @@
 	            android:layout_width="wrap_content"
 	            android:layout_height="wrap_content"
 				android:layout_below="@+id/account_info_two_pass_confirm_label"
+				android:text="@string/invalid_value"
+				android:visibility="gone"
 				android:textColor="@color/red"/>
             
             <EditText
