--- a/Phone/main/res/values/color.xml
+++ b/Phone/main/res/values/color.xml
@@ -20,5 +20,25 @@
     <color name="secondary_light">#FAB561</color>
     <color name="tertiary">#A0A0A0</color>
     <color name="white_transparent">#A0FFFFFF</color>
-	
+    
+    <!-- Discover Primary Colors -->
+    <color name="title">#293033</color>
+    <color name="body_copy">#3d484d</color>
+    <color name="sub_copy">#576166</color>
+    <color name="field_copy">#8a9499</color>
+    <color name="field_stroke">#dce3e5</color>
+    <color name="header_bg">#d8dde0</color>
+    <color name="sub_header_bg">#e8eced</color>
+    <color name="stroke_rulink_link">#c0c8cc</color>
+    
+    <!-- Discover Secondary Colors -->
+    <color name="orange_gradient_light">#ed4b0b</color>
+    <color name="orange_gradient_dark">#fe8738</color>
+    <color name="silver_gradient_light">#ffffff</color>
+    <color name="silver_gradient_dark">#d6d6d4</color>
+    <color name="orange_link_idicator">#ff6600</color>
+	<color name="error_indicator">#ed1c24</color>
+	<color name="weak_indicator">#ffdb11</color>
+	<color name="string_indicator">#8ed402</color>
+	<color name="blue_link">#0267b1</color>
 </resources>
