--- a/Phone/main/res/layout/logged_in_landing.xml
+++ b/Phone/main/res/layout/logged_in_landing.xml
@@ -59,4 +59,13 @@
         android:paddingLeft="8dp"
         android:paddingBottom="3dp"/>
 
+    <Button
+        android:id="@+id/landing_page_logout_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:text="@string/logout" 
+        android:onClick="logout"/>
+
 </RelativeLayout>
