--- a/Phone/main/res/layout/landing.xml
+++ b/Phone/main/res/layout/landing.xml
@@ -1,16 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    style="@style/BlackTheme"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    style="@style/BlackTheme" >
-    
-    <include layout="@layout/discover_banner"/>
+    android:layout_height="match_parent" >
 
-	<Button
-	    android:id="@+id/card_login_button"
-	    android:layout_width="match_parent"
-	    android:layout_height="wrap_content"
-	    android:layout_centerVertical="true"
-	    android:text="@string/card_login_button_text"/>
+    <include
+        android:id="@+id/include1"
+        layout="@layout/discover_banner" />
+
+    <TextView
+        android:id="@+id/title_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/include1"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="64dp"
+        android:textColor="@color/orange"
+        android:visibility="gone"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <TextView
+        android:id="@+id/subtitle_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/title_label"
+        android:layout_centerHorizontal="true"
+        android:textColor="@color/orange"
+		android:visibility="gone"/>
+    
+    <Button
+        android:id="@+id/card_login_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:text="@string/card_login_button_text" />
 
 </RelativeLayout>
