--- a/Phone/main/res/layout/navigation_main_frame.xml
+++ b/Phone/main/res/layout/navigation_main_frame.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/navigation_main_frame"
+<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+    android:name="com.discover.mobile.section.account.AccountHomeFragment"
+    android:id="@id/navigation_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent" />
