--- a/Phone/main/res/layout/navigation_menu_list.xml
+++ b/Phone/main/res/layout/navigation_menu_list.xml
@@ -4,4 +4,5 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="@dimen/nav_menu_list_padding"
-    android:paddingRight="@dimen/nav_menu_list_padding" />
+    android:paddingRight="@dimen/nav_menu_list_padding"
+    android:background="@color/body_copy" />
