Both Sections and SubSections now show and expand properly when clicked on.

--- a/Phone/main/res/layout/navigation_menu_list.xml
+++ b/Phone/main/res/layout/navigation_menu_list.xml
@@ -5,4 +5,5 @@
     android:layout_height="match_parent"
     android:paddingLeft="@dimen/nav_menu_list_padding"
     android:paddingRight="@dimen/nav_menu_list_padding"
-    android:background="@color/body_copy" />
+    android:background="@color/body_copy"
+    android:divider="@null" />
