--- a/Phone/main/res/layout/account_home.xml
+++ b/Phone/main/res/layout/account_home.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/gradient_bg" >
     
-    <TextView
+    <TextView android:id="@id/title"
         android:text="Account Home"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
