--- a/Phone/main/res/layout/navigation_menu_sub_section_item.xml
+++ b/Phone/main/res/layout/navigation_menu_sub_section_item.xml
@@ -9,6 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="55dp"
         android:gravity="center_vertical"
-        android:text="@string/app_name" />
+        android:text="@string/app_name"
+        android:paddingLeft="16dp" />
     
 </LinearLayout>
