--- a/Phone/main/res/layout/account_summary_landing.xml
+++ b/Phone/main/res/layout/account_summary_landing.xml
@@ -18,7 +18,7 @@
     
     <ListView 
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="fill_parent"
         android:background="#ffffff"/>
 
 </LinearLayout>
