--- a/Phone/main/res/layout/account_summary_landing.xml
+++ b/Phone/main/res/layout/account_summary_landing.xml
@@ -3,11 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#ffffff" >
+    android:background="@drawable/light_gray_bkgrd" >
     
     <LinearLayout 
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="36.5dp"
         android:orientation="horizontal"
         android:background="#e8eced"
         android:paddingBottom="40dp">
@@ -17,8 +17,10 @@
     </LinearLayout>
     
     <ListView 
+        android:id="@+id/account_summary_items"
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
+        android:layout_margin="15dp"
         android:background="#ffffff"/>
 
 </LinearLayout>
