Added fixes for defects. Screens should navigate 'back' correctly and error messages have been updated.

--- a/Phone/main/res/values/strings_account_info.xml
+++ b/Phone/main/res/values/strings_account_info.xml
@@ -4,8 +4,10 @@
 	<string name="account_info_one_step_text">Step 1 of 2: Enter Account Information</string>
     <string name="account_info_dob_text">Date of Birth of Primary Cardmember:</string>
 	<string name="account_info_ssn_info_text">Social Security Number of Primary Cardmember:</string>
-	<string name="account_info_bad_input_error_text">You have entered invalid information.
-	     Carefully review your information and please try again.</string>
+	<string name="account_info_bad_input_error_text">
+	    You have entered invalid information.
+	     Carefully review your information and please try again.
+	</string>
 	<string name="account_info_sams_club_card_error_text">
 	    As a Sam\'s Club Discover Cardmember, you cannot register for the Account Center access 
 	    at Discovercard.com. To manage your account you may register at the Sam\'s Club Web Site.
