Cherry picked needed changes from testing, development, and save-user-id.

--- a/Phone/main/res/layout/account_info_password_strength_help.xml
+++ b/Phone/main/res/layout/account_info_password_strength_help.xml
@@ -32,15 +32,13 @@
             android:textAppearance="?android:attr/textAppearanceSmall"
              />
         
-        <include layout="@layout/not_valid_bar"/>
+        <include layout="@layout/not_valid_bar_help"/>
         
         <TextView
             android:id="@+id/account_info_two_uid_strength_bar_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:layout_alignLeft="@+id/account_info_two_uid_bar_one"
-            android:layout_below="@+id/account_info_two_uid_bar_one" 
             android:text="@string/strength_bar_not_valid"
 			android:textColor="@color/black"
 			android:textAppearance="?android:attr/textAppearanceSmall"/>
@@ -64,15 +62,13 @@
             android:textColor="@color/black"
             android:textSize="@dimen/light_text_size" />
         
-        <include layout="@layout/moderate_bar"/>
+        <include layout="@layout/moderate_bar_help"/>
         
         <TextView
             android:id="@+id/account_info_help_moderate_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:layout_alignLeft="@+id/account_info_help_moderate_bar_one"
-            android:layout_below="@+id/account_info_help_moderate_bar_one" 
             android:text="@string/strength_bar_moderate"
 			android:textColor="@color/black"
 			android:textAppearance="?android:attr/textAppearanceSmall"/>
@@ -120,15 +116,13 @@
             android:textAppearance="?android:attr/textAppearanceSmall"
              />
         
-        <include layout="@layout/strong_bar"/>
+        <include layout="@layout/strong_bar_help"/>
         
         <TextView
             android:id="@+id/account_info_help_strong_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:layout_alignLeft="@+id/account_info_help_moderate_bar_one"
-            android:layout_below="@+id/account_info_help_strong_bar_one" 
             android:text="@string/strength_bar_strong"
 			android:textColor="@color/black"
 			android:textAppearance="?android:attr/textAppearanceSmall"/>
